--- a/HealthCatalystPeopleSearch/src/components/navmenu/navmenu.html
+++ b/HealthCatalystPeopleSearch/src/components/navmenu/navmenu.html
@@ -1,7 +1,7 @@
 <template>
 	<require from="../../resources/value-converters/remove-space-value-converter"></require>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#/home">Navbar</a>
+		<a class="navbar-brand" href="#/home">Health Catalyst</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
 		 aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
