--- a/HealthCatalystPeopleSearch/src/components/pages/person/person.html
+++ b/HealthCatalystPeopleSearch/src/components/pages/person/person.html
@@ -1,9 +1,16 @@
 <template>
     <require from="../../person-editor/person-editor"></require>
     <require from="../../person-search/person-search"></require>
+    <require from="../../person-grid/person-grid"></require>
     <person-search
         on-search.call="onSearch(newSearch)"
         person-name.two-way="personName"
     ></person-search>
     <person-editor person-name.two-way="personName"></person-editor>
+    <person-grid
+        is-loading.bind="isLoading"
+        is-request-slow.bind="isRequestSlow"
+        person-set.bind="personSet"
+        style="display: block; margin-top: 15px;"
+    ></person-grid>
 </template>
